# prophecy-api

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
claude-skill/: SKILL.md
claude-skill/scripts/: deploy_project.py  prophecy_client.py  run_pipeline_and_wait.py  trigger_pipeline.py
docs/: METHODS.md
prophecy/: SKILL.md
prophecy/references/: api_endpoints.md
prophecy/scripts/: get_run_status.py  prophecy_client.py  run_data_tests.py
scripts/: deploy_project.py  get_run_status.py  run_data_tests.py  run_pipeline_and_wait.py  trigger_pipeline.py
src/prophecy_api/: __init__.py  _http.py  cli.py  client.py  exceptions.py
src/prophecy_api/resources/: __init__.py  _base.py  connections.py  fabrics.py  pipelines.py  projects.py  secrets.py
tests/: conftest.py  test_cli_identify.py  test_client.py  test_connections.py  test_fabrics.py  test_http.py  test_pipelines.py  test_projects.py  test_secrets.py
