[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prophecy-api"
version = "0.1.0"
description = "Python client for the Prophecy REST API (pipeline triggers, run status, project deploys, data tests)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "David Finch" }]
keywords = ["prophecy", "api", "data", "pipeline", "etl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3.10",
    "responses>=0.24",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/finchdavid-proph/prophecy-api"
Documentation = "https://docs.prophecy.ai/api-reference/introduction"
Issues = "https://github.com/finchdavid-proph/prophecy-api/issues"

[project.scripts]
prophecy = "prophecy_api.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prophecy_api"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
